LiveText-LiveText3.14/src/objects/LiveTextGlobalSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Global Settings.</description>
    <fields>
        <fullName>Active_Status_Purge_Hours__c</fullName>
        <description>specify hours to change conversation header&apos;s Active status to Ended.</description>
        <label>Active Status Purge Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GlobalTriggerExecutionEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>GlobalTriggerExecutionEnabled if checked will enable/ disable all triggers in Organisation.</description>
        <label>GlobalTriggerExecutionEnabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Status_Purge_Hours__c</fullName>
        <label>New Status Purge Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offline_Status_Purge_Hours__c</fullName>
        <label>Offline Status Purge Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>LiveTextGlobalSettings</label>
</CustomObject>